[package]
name = "rusttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3-built = "0.4"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module", "macros", "multiple-pymethods"]

[dependencies.pyo3-asyncio]
version = "0.14"
features = ["tokio-runtime"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "gzip", "brotli", "json", "stream", "multipart"]


[build-dependencies]
built = { version = "0.4", features = ["chrono"] }

crate-type = ["cdylib"]
